--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "pnpm install && pnpm run build",
+  "installCommand": "npm install --legacy-peer-deps",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
