--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-is": "^19.2.1",
     "react-router-dom": "^7.9.4",
     "react-wordcloud": "^1.2.7",
     "reactflow": "^11.11.4",
